# Creuvux

./: README.md
Client/: ChangeLog  Makefile.am  README  SQLite_manip.txt  SQLite_manip.txt~  TODO  clean.sh  configure.ac
Client/doc/: Makefile.am  client.pem  creuvux.5  creuvux.conf  creuvux.conf.5  rootcert.pem  serveur_liste
Client/scripts/: Makefile.am  creuvuxinit
Client/src/: Makefile.am  SSL_sendfile.c  TODO  client_conf.c  client_conf.h  compil.sh  creuvard.h  creuvux  creuvux.c  find.c  find.h  get.c  get.h  help.c  help.h  info.c  info.h  list.c  list.h  list_cat.c  list_cat.h  list_grp.c  list_grp.h  msg.c  put.c  put.c~  put.h  sync.c  upload.c  upload.h
Client/src/.deps/: creuvux-SSL_sendfile.Po  creuvux-catls.Po  creuvux-client_conf.Po  creuvux-creuvard.Po  creuvux-creuvux.Po  creuvux-creuvux_upload.Po  creuvux-find.Po  creuvux-get.Po  creuvux-help.Po  creuvux-info.Po  creuvux-list.Po  creuvux-list_cat.Po  creuvux-list_grp.Po  creuvux-lsgrp.Po  creuvux-msg.Po  creuvux-network.Po  creuvux-put.Po  creuvux-sync.Po  creuvux-webui_dl.Po  creuvux-xml_listing.Po  gcreuvux-Gtk_get.Po  gcreuvux-Gtk_gui.Po  gcreuvux-Gtk_put.Po  gcreuvux-SSL_sendfile.Po  gcreuvux-catls.Po  gcreuvux-client_conf.Po  gcreuvux-creuvard.Po  gcreuvux-creuvux_upload.Po  gcreuvux-gcreuvux.Po  gcreuvux-get.Po  gcreuvux-help.Po  gcreuvux-lsgrp.Po  gcreuvux-msg.Po  gcreuvux-network.Po  gcreuvux-put.Po  gcreuvux-sync.Po  gcreuvux-xml_listing.Po
Client/src/Gtk/: Gtk_gui.c  Gtk_gui.h  SSL_sendfile.c  SSL_sendfile.h  client_conf.c  compil.sh  creuvard.c  gcreuvux  gcreuvux.c  get.c  get.h  help.h  msg.c  msg.h  network.c  sync.h
Client/src/Gtk-OLD/: Gtk_get.c  Gtk_get.h  Gtk_gui.c  Gtk_gui.h  Gtk_put.c  Gtk_put.h  SSL_sendfile.c  catls.c  catls.h  client_conf.c  client_conf.h  creuvard.c  creuvard.h  creuvux_upload.c  creuvux_upload.h  creuvuxhttpd.c  creuvuxhttpd.h  gcreuvux.c  get.c  get.h  help.c  help.h  lsgrp.c  lsgrp.h  msg.c  msg.h  network.c  network.h  put.c  put.h  sync.c  thread.h  webui_dl.c  webui_dl.h  xml_listing.c  xml_listing.h
Client/src/Gtk-OLD/.svn/: all-wcprops  entries
Client/src/Gtk-OLD/.svn/text-base/: gcreuvux.c.svn-base
Server/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  clean  config.h  config.h.in  config.status  configure  configure.ac  gen_conf.sh
Server/autom4te.cache/: output.0  requests  traces.0  traces.1
Server/doc/: Exemple-creuvux.conf  Makefile  Makefile.am  Makefile.in  creuvuxd.conf.5  group.conf.5
Server/doc/pki/: client.cnf  creuvux.cnf  creuvuxd.cnf  list.txt  rootCA.cnf  server.cnf
Server/scripts/: Makefile  Makefile.am  Makefile.in  creuvuxdctl
Server/src/: Doxyfile  Doxyfile.old  Makefile  Makefile.am  Makefile.in  SSL_loadfile.c  SSL_loadfile.h  SSL_sendfile.c  SSL_sendfile.h  compil.sh  create_database.c  create_database.h  creuvard.c  creuvard.h  creuvux_stat.c  creuvux_stat.h  creuvuxd.c  crv_mysql.c  crv_mysql.h  crv_string.c  crv_string.h  get.c  get.h  help.h  log.c  log.h  network.c  network.h  put.c  put.h  server_conf.c  server_conf.h  sync.c  sync.h  tags  update_database.c  update_database.h
Server/src/doxygen/html/: _s_s_l__loadfile_8h_source.html  _s_s_l__sendfile_8h_source.html  annotated.html  classes.html  create__database_8h_source.html  creuvard_8c.html  creuvard_8c__incl.map  creuvard_8c__incl.md5  creuvard_8c_a01e9338ce13c961896c2fc3f944899c7_icgraph.map  creuvard_8c_a01e9338ce13c961896c2fc3f944899c7_icgraph.md5  creuvard_8c_abbcce344897d42c37a326eae7476a89a_icgraph.map  creuvard_8c_abbcce344897d42c37a326eae7476a89a_icgraph.md5  creuvard_8c_acc839f13073a1ff8a27abc9efd582a62_icgraph.map  creuvard_8c_acc839f13073a1ff8a27abc9efd582a62_icgraph.md5  creuvard_8c_ae5abc2436ae618eba165f5c64d7a36ed_icgraph.map  creuvard_8c_ae5abc2436ae618eba165f5c64d7a36ed_icgraph.md5  creuvard_8h_source.html  creuvux__stat_8h_source.html  creuvuxd_8c.html  creuvuxd_8c__incl.map  creuvuxd_8c__incl.md5  creuvuxd_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  creuvuxd_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  crv__mysql_8h_source.html  crv__string_8h_source.html  files.html  get_8h_source.html  globals.html  globals_func.html  graph_legend.html  help_8h_source.html  index.html  log_8h_source.html  network_8h_source.html  put_8h_source.html  server__conf_8c.html  server__conf_8c__incl.map  server__conf_8c__incl.md5  server__conf_8c_ab7c4ca9e8fb899188488d87cbe8691ea_icgraph.map  server__conf_8c_ab7c4ca9e8fb899188488d87cbe8691ea_icgraph.md5  (+9 more)
Server/src/doxygen/html/search/: all_63.js  all_67.js  all_69.js  all_73.js  classes_63.js  classes_73.js  classes_75.js  files_63.js  files_73.js  functions_63.js  functions_6d.js  search.js
Server/src/doxygen/latex/: annotated.tex  creuvard_8c.tex  creuvard_8c__incl.md5  creuvard_8c_a01e9338ce13c961896c2fc3f944899c7_icgraph.md5  creuvard_8c_abbcce344897d42c37a326eae7476a89a_icgraph.md5  creuvard_8c_acc839f13073a1ff8a27abc9efd582a62_icgraph.md5  creuvard_8c_ae5abc2436ae618eba165f5c64d7a36ed_icgraph.md5  creuvuxd_8c.tex  creuvuxd_8c__incl.md5  creuvuxd_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  doxygen.sty  files.tex  refman.tex  server__conf_8c.tex  server__conf_8c__incl.md5  server__conf_8c_ab7c4ca9e8fb899188488d87cbe8691ea_icgraph.md5  struct_command__options.tex  struct_gstat.tex  struct_server_options.tex  struct_ustat.tex  structslist__t.tex  structstring__t.tex
Server/src/doxygen/man/man3/: Command_options.3  Gstat.3  ServerOptions.3  Ustat.3  creuvard.c.3  creuvuxd.c.3  slist_t.3  string_t.3
WebApp/: config.php  index.php  phpinfo.php
WebApp/control/: add_msg.php  admin.php  admin1.php  admin_list_clients_htmlgen.php  admin_list_servers.php  admin_list_servers_htmlgen.php  del_onglet.php  download.php  faq.php  get-file.php  if-admin.php  if_admin_access.php  index.php  info.php  inscription.php  logout.php  modif.php  modif_rename.php  upload.php  validation.php
WebApp/install/: install.php
WebApp/model/: add-srv.php  add_msg.php  admin_list_clients.php  del_tab.php  exec_inscription.php  find_file_onserv.php  gen-main-filedb.php  get_list.php  info.php  (+13 more)
(+15 files in other folders)
