bin_PROGRAMS=creuvux 
#gcreuvux
creuvux_CFLAGS= -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -O2 -Wchar-subscripts -Wcomment -Wformat=2 -Wimplicit-int -Wmain -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wtrigraphs -Wuninitialized -Wunknown-pragmas -Wfloat-equal -Wundef -Wshadow -Wpointer-arith -Wbad-function-cast -Wwrite-strings -Wconversion -Wsign-compare -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wmissing-noreturn -Wformat -Wmissing-format-attribute -Wno-deprecated-declarations -Wpacked -Wredundant-decls -Wnested-externs -Winline -Wlong-long -Wunused -I/usr/local/include -L/usr/local/lib -lsqlite3
# -Wunreachable-code  -Werror-implicit-function-declaration
#gcreuvux_CFLAGS= -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -O2 -Wchar-subscripts -Wcomment -Wformat=2 -Wimplicit-int -Wmain -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wtrigraphs -Wuninitialized -Wunknown-pragmas -Wfloat-equal -Wundef -Wshadow -Wpointer-arith -Wbad-function-cast -Wwrite-strings -Wconversion -Wsign-compare -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wmissing-noreturn -Wformat -Wmissing-format-attribute -Wno-deprecated-declarations-Wpacked -Wredundant-decls -Wnested-externs -Winline -Wlong-long -Wunused @XML_CFLAGS@ @XSLT_CFLAGS@ @GLIB_CFLAGS@ @GTK_CFLAGS@
creuvux_LDADD=
#gcreuvux_LDADD=@XML_LIBS@ @XSLT_LIBS@ @GLIB_LIBS@ @GTK_LIBS@
creuvux_SOURCES=SSL_sendfile.c creuvard.c find.c help.c list.c list_grp.c network.c sync.c client_conf.c creuvux.c get.c info.c list_cat.c msg.c put.c
#gcreuvux_SOURCES= gcreuvux.c Gtk_put.c Gtk_put.h Gtk_gui.c Gtk_gui.h client_conf.c  client_conf.h  creuvard.c  creuvard.h help.h network.c  network.h sync.c sync.h thread.h xml_listing.c xml_listing.h Gtk_get.c Gtk_get.h put.c put.h SSL_sendfile.c SSL_sendfile.h help.c msg.c msg.h catls.c catls.h creuvux_upload.c creuvux_upload.h lsgrp.c lsgrp.h get.h get.c
